[tool.poetry]
name = "MLp"
version = "0.1.0"
description = "MODULAR, EASY, QUICK AND REPRODUCIBLER PREPROCESSING, MODEL BUILDING, FINETUNING AND TRAINING/INFERENCE PIPELINES."
authors = ["Valentin Ozeel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
joblib = "^1.3.2"
matplotlib = "^3.8.3"
mlflow = "^2.10.2"
numpy = "^1.26.4"
optuna = "^3.5.0"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
scikit-learn-intelex = "^2024.2.0"
seaborn = "^0.13.2"
shap = "^0.44.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
