[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MLp"
dynamic = ["version"]
description = "MODULAR, EASY, QUICK AND REPRODUCIBLER PREPROCESSING, MODEL BUILDING, FINETUNING AND TRAINING/INFERENCE PIPELINES."
authors = [
{name="Valentin Ozeel", email='valentin.ozeel.pro@gmail.com'}
]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"

dependencies= [
'colorama == 0.4.6',
'joblib == 1.3.2',
'matplotlib == 3.8.3',
'mlflow == 2.10.2',
'numpy == 1.26.4',
'optuna == 3.5.0',
'pandas == 2.2.1',
'scikit-learn == 1.4.1.post1',
'scikit-learn-intelex == 2024.2.0',
'seaborn == 0.13.2',
'shap == 0.44.1',
]
